# desktop-shell-integration-nautilus

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  createcajaplugin.sh  createnemoplugin.sh  syncstate.py
